# order_system

./: .gitignore  Readme.md  init.sql
backend/: README.md  config.py  config.yaml  database.py  dependencies.py  init_admin.py  main.py  models.py  pyproject.toml  schemas.py  security.py  start.py  test_pagination_api.py  test_search_api.py  test_user_management.py
backend/routers/: auth.py  auth_backup.py  comment.py  item.py  order.py  stats.py  store.py  user.py
backend/utils/: __init__.py  email.py
docs/: 1.md  104 B 食堂餐点预约系统 开题报告 5.docx  104 B 食堂餐点预约系统 需求分析报告 5.docx  104 B 食堂餐点预约系统 需求获取报告 5.docx  2.md  3.md  4.md  api-path-changes.md
frontend-app/: package.json  pages.config.ts  pnpm-lock.yaml  tsconfig.json  uno.config.ts
frontend-app/src/: App.ku.vue  App.vue  main.ts  uni.scss
frontend-app/src/api/: comment.ts  item.ts  login.ts  order.ts  store.ts
frontend-app/src/api/types/: common.ts  login.ts
frontend-app/src/http/: http.ts
frontend-app/src/layouts/: default.vue
frontend-app/src/pages-fg/login/: email-login.vue  login.vue  (+2 more)
frontend-app/src/router/: config.ts
frontend-app/src/store/: token.ts  user.ts
frontend-app/src/tabbar/: config.ts  index.vue
frontend-app/src/utils/: index.ts
frontend-web/: CHANGELOG.md  README.en_US.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend-web/src/: App.vue
frontend-web/src/plugins/: app.ts
frontend-web/src/theme/: settings.ts
frontend-web/src/typings/: app.d.ts  components.d.ts  elegant-router.d.ts  typed-router.d.ts  vite-env.d.ts
resources/: settings-new.ts
(+92 files in other folders)
